<resources>
    <string name="app_name">Easy Orchids</string>
    <string-array name="navigation_drawer_menu">
        <item>Schedule</item>
        <item>My Orchids</item>
        <item>Orchid Care</item>
        <item>Settings</item>
        <item>Help &amp; Feedback</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_new_event</item>
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_cup_water_black_24dp</item>
        <item>@drawable/perm_group_system_tools</item>
        <item>@drawable/ic_menu_help_holo_light</item>
    </array>
    <string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>
	<string name="action_settings">Settings</string>
	
	<!-- Content Description for the navigation drawer list items-->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <!-- Material Deign Strings -->
    <string name="orchids_main">Main Page</string>
    <string name="easyOrchids">Easy Orchid</string>
    
    <!-- My orchids list menu strings -->
    <string name="edit_orchid_string">Edit</string>
    <string name="add_orchid_string">Add Orchid</string>
    <string name="delete_orchid_string">Delete</string>
    
    <!-- Types of orchids for the spinner -->
    <string-array name="orchid_types">
        <item>Phaelanopsis</item>
        <item>Dendrobium</item>
        <item>Oncidium</item>
    </string-array>
    
    <!-- Add orchids layout strings -->
    <string name="set_orchid_name">Enter Name</string>
    <string name="orchid_types_prompt">Choose Type</string>
    <string name="last_watered_d">Last Watered</string>
    <string name="last_fertilized_d">Last Fertilized</string>
    <string name="chk_isoutside"> Is the orchid outside</string>
    <string name="season_prompt">Choose Season</string>
    <string name="last_watered_btn">Last Watered</string>
    <string name="last_fertilized_btn">Last Fertilized</string>
    <string name="choose_season">Choose Season</string>
    <string name="orchid_type">Choose Type</string>
    
   <!-- Add orchids action strings -->
   <string name="add_orchid_cancel_string">Cancel</string>
   <string name="add_orchid_save_string">Save</string>
   
   <!-- Help and Feedback action strings -->
   <string name="feedback_string">Feedback</string>
   <string name="send_to_string"> Send to:</string>
   <string name="text_message_string">Enter feedback</string>
   <string name="subject_string">Enter subject</string>
 
    <!-- Seasons for the spinner -->
    <string-array name="seasons_array">
        <item>Summer</item>
        <item>Autumn</item>
        <item>Winter</item>
        <item>Spring</item>
    </string-array>
    
</resources>