<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:layout_gravity="center_vertical" >

    <TableRow >
        <EditText
            android:id="@+id/textTo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/send_to_string" />text_message_string
    </TableRow>
    <TableRow >
        <EditText
            android:id="@+id/subject_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/subject_string" />
    </TableRow>
    <TableRow >
        <EditText
            android:id="@+id/message_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/text_message_string" />
    </TableRow>
    <TableRow>
         <Button
            android:id="@+id/feedback_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:onClick="feedbackOnClick"
            android:src="@android:drawable/sym_action_email"
            android:text="@string/feedback_string" />
    </TableRow>

</TableLayout>